CI: intergers will not be in the output of (declare-fun ... )
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18447 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c